--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -100,3 +100,15 @@ publisher={CRAN},
   publisher={MDPI}
 }
 
+@Article{dunn1996,
+  author       = {Dunn P. K. Smyth, G. K.},
+  date         = {1996},
+  journaltitle = {Journal of Computational and Graphical Statistics},
+  title        = {Randomized quantile residuals},
+  number       = {3},
+  pages        = {236--244},
+  volume       = {5},
+  journal      = {Journal of Computational and Graphical Statistics},
+  publisher    = {Taylor \& Francis},
+  year         = {1996},
+}
