--- a/TCC_A/docs/bib.bib
+++ b/TCC_A/docs/bib.bib
@@ -23,6 +23,18 @@
   publisher={Elsevier}
 }
 
+@Article{Nagelkerke1991,
+  author    = {Nagelkerke, Nico JD and others},
+  title     = {A note on a general definition of the coefficient of determination},
+  number    = {3},
+  pages     = {691--692},
+  volume    = {78},
+  journal   = {Biometrika},
+  publisher = {Oxford University Press},
+  year      = {1991},
+}
+
+
 @book{wickham2019advanced,
   title={Advanced r},
   author={Wickham, Hadley},
