--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -112,3 +112,15 @@ publisher={CRAN},
   publisher    = {Taylor \& Francis},
   year         = {1996},
 }
+
+
+@Article{Nagelkerke1991,
+  author    = {Nagelkerke, Nico JD and others},
+  title     = {A note on a general definition of the coefficient of determination},
+  number    = {3},
+  pages     = {691--692},
+  volume    = {78},
+  journal   = {Biometrika},
+  publisher = {Oxford University Press},
+  year      = {1991},
+}
